syntax = "proto3";

package intra;

service Node{
  rpc Create(CreateInfo) returns (CreateResponse) {}
  rpc Leader(LeaderRequest) returns (LeaderInfo) {}
}

message CreateInfo {
  string name = 1;
  uint64 id = 2;
  repeated PeerInfo peers = 3;
}

message CreateResponse {
}

message PeerInfo {
  string uri = 1;
  uint64 id = 2;
}

message LeaderRequest {
  string name = 1;
}

message LeaderInfo {
  PeerInfo peer = 1;
}
